fix: heigh fix on mobile

--- a/blocks/experience/experience.css
+++ b/blocks/experience/experience.css
@@ -1,6 +1,6 @@
 main .experience-container {
   width: 100%;
-  padding-top: 42px;
+  padding-top: 120px;
   padding-bottom: 77px;
 }
 
